@@ -2,6 +2,11 @@ Revision history for Perl module Perl::OSType
 
 {{$NEXT}}
 
+  *** BACKWARDS INCOMPATIBLE CHANGE ***
+
+  - removed 'os_family' and 'is_os_family' functions
+    due to their inherent ambiguity
+
 0.005     2010-05-16 21:52:28 EST5EDT
 
   - renamed from OSType to Perl::OSType in preparation for
